<resources>
    <string name="app_name">Batman Arkham Knight Characters</string>
    <string name="title_activity_my_main">Semperesa Android Project</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Log In</string>
    <string name="image_content_description">Game Character</string>
    <string name="characters_fragment">Batman Characters</string>
    <string name="placeholder_name">Name</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_subject">Subject</string>
    <string name="placeholder_message">Message</string>
    <string name="submit">Submit</string>
</resources>