<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15sp"
    tools:context=".ContactActivity">

    <EditText
        android:id="@+id/contactName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="text"
        android:layout_marginTop="15dp"
        android:hint="@string/placeholder_name" />

    <EditText
        android:id="@+id/contactEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="25dp"
        android:hint="@string/placeholder_email" />

    <EditText
        android:id="@+id/contactSubject"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textEmailSubject"
        android:layout_marginTop="25dp"
        android:hint="@string/placeholder_subject" />

    <EditText
        android:id="@+id/contactMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="25dp"
        android:gravity="top"
        android:hint="@string/placeholder_message" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/submit" />

</LinearLayout>